src/objects/QIRS_Action_Plan_Approver_List__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Mobile Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks Global Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzCustomer Experience Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzMobile Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzGlobal Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Nokia QIRS, Nokia QIRS Admin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Plan_Approver_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Master Approver Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>User__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAC-{000000}</displayFormat>
        <label>Master Approver Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Approver Configuration</pluralLabel>
    <recordTypes>
        <fullName>QIRS_Master_Config_Layout</fullName>
        <active>true</active>
        <label>QIRS_Master_Config_Layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>